Database - Create Database functionality + updates to POM for fixing the build warnings.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <!--adding version to fix warnings during build-->
+                <version>3.2.2</version>
                 <configuration>
                     <archive>
                         <manifest>
