--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>ca.dal.distributed.dpg1</groupId>
     <artifactId>DMWAProject</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+    <developers>
+        <developer>
+            <id>B00882839</id>
+            <name>Bharatwaaj Shankaranarayanan</name>
+            <email>bharatwaaj@dal.ca</email>
+            <roles>
+                <role>Student</role>
+            </roles>
+        </developer>
+    </developers>
 
     <build>
         <finalName>DistributedDatabase</finalName>
