Helper methods for distributed database

--- a/pom.xml
+++ b/pom.xml
@@ -78,4 +78,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
+    </dependencies>
+
 </project>
