--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,15 @@
                 <role>Developer</role>
             </roles>
         </developer>
+        <developer>
+            <id>B00910690</id>
+            <name>Guryash Singh Dhall</name>
+            <email>guryash.dhall@dal.ca</email>
+            <roles>
+                <role>Student</role>
+                <role>Developer</role>
+            </roles>
+        </developer>
     </developers>
 
     <build>
